--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "mevn-stack-data",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "client": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "npm run build --prefix server && vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "server": "npm run dev --prefix server",
+    "clean": "rimraf dist server/dist",
+    "start": "npm start --prefix server"
   },
   "dependencies": {
+    "bootswatch": "^5.1.3",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
-    "vue": "^3.0.0"
+    "rimraf": "^3.0.2",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
