--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "npm start --prefix server"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "bootswatch": "^5.1.3",
     "core-js": "^3.21.1",
     "rimraf": "^3.0.2",
